Squashed alpha-1.5.0-pre20
commit 6bcdde564563a3065fef3c22384153ba868fc9b8
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Thu Nov 19 19:24:26 2015 +0100

    Allow to open external links from Style Editor

commit 31608aa767b5dc3588936540bc9c1d859f7dc0cb
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Thu Nov 19 18:34:38 2015 +0100

    Fix NPE bug hash 341f63a261993d67d0fbccb6b9e5ae1e

commit a0f1cac473807e2c1bd43094abf9f51222fa01c0
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Thu Nov 19 18:04:35 2015 +0100

    Fix NPE

    java.lang.NullPointerException
    	at
    org.freeplane.view.swing.features.filepreview.ExternalResource.setZoom(ExternalResource.java:68)
    	at
    org.freeplane.view.swing.features.filepreview.ExternalResource.setZoom(ExternalResource.java:85)
    	at
    org.freeplane.plugin.svg.SvgViewerFactory$1.gvtRenderingCompleted(SvgViewerFactory.java:91)
    	at
    org.apache.batik.swing.gvt.GVTTreeRenderer$4.dispatch(GVTTreeRenderer.java:193)

commit 16ef47753ad396c022dbbcb2af9ebb740585c15c
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Thu Nov 19 17:24:47 2015 +0100

    Change styles_background_html

commit c6e52b61a8d85ba28e2e668ce33a4a58657ccfb2
Merge: ee1d6e0 2017345
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Thu Nov 19 17:17:53 2015 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane into 1.5.x

commit ee1d6e085b7329caf0ea36c6313432779aedd55d
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Thu Nov 19 17:17:35 2015 +0100

    Don't create user standard template for now

commit 20173458fcdeb66ce36abfe42582b1a30ba87adf
Merge: 4e277d1 be0f0e2
Author: Weblate <noreply@weblate.org>
Date:   Thu Nov 19 17:15:30 2015 +0100

    Merge remote-tracking branch 'origin/1.5.x' into 1.5.x

commit 4e277d1e063b0ce7308d4f83aa35585e58a812d7
Author: Ldm Public <ldmpub@gmail.com>
Date:   Thu Nov 19 15:59:47 2015 +0100

    Translated using Weblate (French)

    Currently translated at 99.4% (1826 of 1837 str

--- a/freeplane/resources/translations/Resources_fr.properties
+++ b/freeplane/resources/translations/Resources_fr.properties
@@ -1026,6 +1026,7 @@ OptionPanel.fr=Fran\u00E7ais
 OptionPanel.gl=Gl
 OptionPanel.goto_note_end_on_edit=Placer le curseur en fin de note
 OptionPanel.grid_size=Pas pour la grille d'alignement des n\u0153uds (1 = aucune grille)
+OptionPanel.groovy_editor_font.tooltip=S\u00E9lectionnez les polices 'Dialog' ou 'Monospace' si vous souhaitez utiliser des caract\u00E8res unicode !
 OptionPanel.gtk=Gtk
 OptionPanel.hide_edge=Invisible
 OptionPanel.highlight_formulas=Entourer les formules
@@ -1061,6 +1062,7 @@ OptionPanel.language.tooltip=<html>Langue de l'application.<br>La valeur 'automa
 OptionPanel.last=En bas
 OptionPanel.last_opened_list_length=Nombre de fichiers dans la liste des fichiers r\u00E9cents
 OptionPanel.latex_disable_editor.tooltip=Cochez cette case si vous avez des difficult\u00E9s avec l'\u00E9diteur LaTeX
+OptionPanel.latex_editor_font.tooltip=S\u00E9lectionnez les polices 'Dialog' ou 'Monospace' si vous souhaitez utiliser des caract\u00E8res unicode !
 OptionPanel.layout_map_on_text_change=Rafra\u00EEchir la position des n\u0153uds pendant la saisie
 OptionPanel.layout_map_on_text_change.tooltip=Sur un ordinaiteur peu performant, il est recommand\u00E9 de d\u00E9sactiver cette option
 OptionPanel.linear=Droit
@@ -1124,6 +1126,7 @@ OptionPanel.parse_data=D\u00E9tecter la saisie de nombres et de dates
 OptionPanel.parse_data.tooltip=<html>D\u00E9tecter les nombres et dates et les formater automatiquement.<br>Exemples : 1 002,33 ou 31/12 ou 31/12/99 ou 31-12-1999 ou 31-12-1999 23:59
 OptionPanel.parse_formulas=Identifier les formules
 OptionPanel.parse_formulas.tooltip=Les formules d\u00E9butent par le caract\u00E8re '='. Voir http://www.freeplane.org/wiki/index.php/Formulas.
+OptionPanel.parse_latex=Reconna\u00EEtre LaTeX
 OptionPanel.PASTE_HTML=Coller avec mise en forme
 OptionPanel.PASTE_PLAIN_TEXT=Coller comme texte brut
 OptionPanel.path_property_may_not_be_empty=Le dossier ne peut \u00EAtre vide ! R\u00E9tablissement des anciennes valeurs.
@@ -1262,7 +1265,7 @@ OptionPanel.spelling_opt_ignore_words_with_numbers=Ignorer les mots contenant de
 OptionPanel.spelling_opt_suggestions_limit_dialog=Nombre de suggestions dans la fen\u00EAtre
 OptionPanel.spelling_opt_suggestions_limit_menu=Nombre de suggestions dans le menu
 OptionPanel.sr=Serbe /  \u0441\u0440\u043F\u0441\u043A\u0438
-OptionPanel.standard_template=Mod\u00E8le de carte par d\u00E9faut
+OptionPanel.standard_template=Mod\u00E8le de carte par d\u00E9faut (choisissez une valeur ou entrez le chemin)
 OptionPanel.standardbackgroundcolor=Couleur de fond
 OptionPanel.standardbackgroundcolor.tooltip=Couleur par d\u00E9faut du fond
 OptionPanel.standardcloudcolor=Couleur de nuage
@@ -1458,7 +1461,7 @@ ResetStyleAction.text=Effacer le style du n\u0153ud
 RevertAction.text=Restaurer le dernier enregistrement
 RevisionPluginAction.text=Indiquer les n\u0153uds r\u00E9vis\u00E9s
 save_failed=L''enregistrement de la carte {0} a \u00E9chou\u00E9.
-save_unsaved=Souhaitez-vous enregistrer la carte ?
+save_unsaved=Souhaitez-vous enregistrer la carte suivante ?
 save_unsaved_styles=Enregistrer les styles ?
 SaveAcceleratorPresetsAction.text=Enregistrer les touches de fonction...
 SaveAction.text=Enregistrer
